hamburger button on iOS fix

--- a/www/dev/less/style.less
+++ b/www/dev/less/style.less
@@ -259,11 +259,16 @@ nav[role="navigation"] {
     }
   }
   #toggle-button {
+    margin: 0;
+    padding: 0;
     float: left;
     display: block;
     height: 30px;
-    margin-top: 10px;
+    margin-top: 8px;
     width: 25px;
+    background: none;
+    border: none;
+    outline: none;
     span {
       display: block;
       height: 4px;
