--- a/www/public/front/css/less.css
+++ b/www/public/front/css/less.css
@@ -7213,11 +7213,16 @@ nav[role="navigation"] {
   }
 }
 nav[role="navigation"] #toggle-button {
+  margin: 0;
+  padding: 0;
   float: left;
   display: block;
   height: 30px;
-  margin-top: 10px;
+  margin-top: 8px;
   width: 25px;
+  background: none;
+  border: none;
+  outline: none;
 }
 nav[role="navigation"] #toggle-button span {
   display: block;
